[workspace]
resolver = "2"
members = [
  "interface",
  "program",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
bytemuck = { version = "1.23.2", features = ["derive"] }
pinocchio = { version = "0.9.2" }
pinocchio-pubkey = { version = "0.3.0" }
solana-sdk = "2.2.0"
static_assertions = "1.1.0"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = "1.47.1"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-alloc", "custom-panic", "frozen-abi", "no-entrypoint"))',
]