[package]
name = "price"
version.workspace = true
edition.workspace = true

[dependencies]
static_assertions.workspace = true
pinocchio.workspace = true
rust_decimal = { workspace = true, optional = true, features = ["macros"] }

[dev-dependencies]
rust_decimal = { workspace = true, features = ["macros"] }
strum.workspace = true
strum_macros.workspace = true

[lints]
workspace = true

[features]
default = []
client = ["dep:rust_decimal"]
