[package]
name = "dropset"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck.workspace = true
dropset-interface = { path = "../interface" }
pinocchio.workspace = true
pinocchio-pubkey.workspace = true
static_assertions.workspace = true

[lints]
workspace = true
